--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -683,6 +683,14 @@ video {
   }
 }
 
+.categories-img-left {
+  background: linear-gradient(rgba(33, 33, 33, 0.6),rgba(33, 33, 33, 0.6)),url(../images/categories/category-left.jpg);
+}
+
+.categories-img-right {
+  background: linear-gradient(rgba(33, 33, 33, 0.6),rgba(33, 33, 33, 0.6)),url(../images/categories/category-right.jpg);
+}
+
 .invisible {
   visibility: hidden;
 }
@@ -758,6 +766,16 @@ video {
   margin-bottom: 1rem;
 }
 
+.my-14 {
+  margin-top: 3.5rem;
+  margin-bottom: 3.5rem;
+}
+
+.mx-10 {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+}
+
 .mb-0 {
   margin-bottom: 0px;
 }
@@ -772,6 +790,10 @@ video {
 
 .mb-6 {
   margin-bottom: 1.5rem;
+}
+
+.mt-14 {
+  margin-top: 3.5rem;
 }
 
 .mt-4 {
@@ -792,6 +814,50 @@ video {
 
 .mt-auto {
   margin-top: auto;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mt-16 {
+  margin-top: 4rem;
+}
+
+.mt-20 {
+  margin-top: 5rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
+.mt-36 {
+  margin-top: 9rem;
+}
+
+.mt-48 {
+  margin-top: 12rem;
+}
+
+.mt-44 {
+  margin-top: 11rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-28 {
+  margin-top: 7rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 
 .line-clamp-2 {
@@ -845,16 +911,16 @@ video {
   height: 1rem;
 }
 
+.h-48 {
+  height: 12rem;
+}
+
 .h-5 {
   height: 1.25rem;
 }
 
 .h-6 {
   height: 1.5rem;
-}
-
-.h-64 {
-  height: 16rem;
 }
 
 .h-7 {
@@ -877,6 +943,10 @@ video {
   height: 22px;
 }
 
+.h-\[250px\] {
+  height: 250px;
+}
+
 .h-\[90px\] {
   height: 90px;
 }
@@ -897,16 +967,16 @@ video {
   height: 10rem;
 }
 
-.h-36 {
-  height: 9rem;
-}
-
 .h-44 {
   height: 11rem;
 }
 
-.h-48 {
-  height: 12rem;
+.h-80 {
+  height: 20rem;
+}
+
+.h-52 {
+  height: 13rem;
 }
 
 .max-h-0 {
@@ -993,6 +1063,10 @@ video {
   width: 1px;
 }
 
+.w-40 {
+  width: 10rem;
+}
+
 .max-w-\[201px\] {
   max-width: 201px;
 }
@@ -1017,6 +1091,18 @@ video {
 
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-6 {
+  grid-template-columns: repeat(6, minmax(0, 1fr));
+}
+
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -1081,6 +1167,10 @@ video {
   row-gap: 0.75rem;
 }
 
+.gap-y-5 {
+  row-gap: 1.25rem;
+}
+
 .space-y-1 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1109,6 +1199,12 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
+
+.space-y-5 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 
 .divide-y > :not([hidden]) ~ :not([hidden]) {
@@ -1251,6 +1347,10 @@ video {
   padding: 1.5rem;
 }
 
+.p-10 {
+  padding: 2.5rem;
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1303,6 +1403,10 @@ video {
   padding-right: 1.75rem;
 }
 
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
 .pt-3 {
   padding-top: 0.75rem;
 }
@@ -1313,14 +1417,6 @@ video {
 
 .pt-5 {
   padding-top: 1.25rem;
-}
-
-.pt-64 {
-  padding-top: 16rem;
-}
-
-.pt-10 {
-  padding-top: 2.5rem;
 }
 
 .text-center {
@@ -1358,6 +1454,26 @@ video {
 
 .text-xs {
   font-size: 10px;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .font-bold {
@@ -1510,6 +1626,11 @@ video {
   opacity: 1;
 }
 
+.child\:mx-auto > * {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .child\:mb-5 > * {
   margin-bottom: 1.25rem;
 }
@@ -1522,8 +1643,80 @@ video {
   display: inline-block;
 }
 
+.child\:flex > * {
+  display: flex;
+}
+
+.child\:w-40 > * {
+  width: 10rem;
+}
+
+.child\:w-44 > * {
+  width: 11rem;
+}
+
+.child\:w-8 > * {
+  width: 2rem;
+}
+
+.child\:w-80 > * {
+  width: 20rem;
+}
+
+.child\:w-72 > * {
+  width: 18rem;
+}
+
+.child\:w-5 > * {
+  width: 1.25rem;
+}
+
+.child\:w-52 > * {
+  width: 13rem;
+}
+
+.child\:w-6 > * {
+  width: 1.5rem;
+}
+
+.child\:w-60 > * {
+  width: 15rem;
+}
+
+.child\:w-56 > * {
+  width: 14rem;
+}
+
+.child\:flex-col > * {
+  flex-direction: column;
+}
+
+.child\:items-center > * {
+  align-items: center;
+}
+
+.child\:gap-y-5 > * {
+  row-gap: 1.25rem;
+}
+
+.child\:gap-y-3 > * {
+  row-gap: 0.75rem;
+}
+
+.child\:gap-y-2 > * {
+  row-gap: 0.5rem;
+}
+
+.child\:rounded-2xl > * {
+  border-radius: 1rem;
+}
+
 .child\:rounded-xl > * {
   border-radius: 0.75rem;
+}
+
+.child\:rounded-3xl > * {
+  border-radius: 1.5rem;
 }
 
 .child\:border-b > * {
@@ -1619,6 +1812,11 @@ video {
   background-color: rgb(16 185 129 / var(--tw-bg-opacity));
 }
 
+:is(.dark .dark\:bg-zinc-600) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(82 82 91 / var(--tw-bg-opacity));
+}
+
 :is(.dark .dark\:bg-zinc-700) {
   --tw-bg-opacity: 1;
   background-color: rgb(63 63 70 / var(--tw-bg-opacity));
@@ -1627,21 +1825,6 @@ video {
 :is(.dark .dark\:bg-zinc-800) {
   --tw-bg-opacity: 1;
   background-color: rgb(39 39 42 / var(--tw-bg-opacity));
-}
-
-:is(.dark .dark\:bg-zinc-400) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(161 161 170 / var(--tw-bg-opacity));
-}
-
-:is(.dark .dark\:bg-zinc-500) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(113 113 122 / var(--tw-bg-opacity));
-}
-
-:is(.dark .dark\:bg-zinc-600) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(82 82 91 / var(--tw-bg-opacity));
 }
 
 :is(.dark .dark\:text-emerald-500) {
@@ -1663,21 +1846,6 @@ video {
   color: rgb(39 39 42 / var(--tw-text-opacity));
 }
 
-:is(.dark .dark\:text-gray-300) {
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
-}
-
-:is(.dark .dark\:text-zinc-300) {
-  --tw-text-opacity: 1;
-  color: rgb(212 212 216 / var(--tw-text-opacity));
-}
-
-:is(.dark .dark\:text-zinc-500) {
-  --tw-text-opacity: 1;
-  color: rgb(113 113 122 / var(--tw-text-opacity));
-}
-
 :is(.dark .dark\:hover\:bg-emerald-600:hover) {
   --tw-bg-opacity: 1;
   background-color: rgb(5 150 105 / var(--tw-bg-opacity));
@@ -1685,11 +1853,6 @@ video {
 
 :is(.dark .child\:dark\:border-b-white\/10) > * {
   border-bottom-color: rgb(255 255 255 / 0.1);
-}
-
-:is(.dark .child\:dark\:bg-zinc-500) > * {
-  --tw-bg-opacity: 1;
-  background-color: rgb(113 113 122 / var(--tw-bg-opacity));
 }
 
 :is(.dark .child\:dark\:bg-zinc-700) > * {
@@ -1702,10 +1865,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-:is(.dark .child\:dark\:text-white\/80) > * {
-  color: rgb(255 255 255 / 0.8);
-}
-
 @media (min-width: 360px) {
   .xs\:aspect-\[2\/1\] {
     aspect-ratio: 2/1;
@@ -1713,6 +1872,14 @@ video {
 
   .xs\:h-auto {
     height: auto;
+  }
+
+  .xs\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .xs\:grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 
   .xs\:text-2xl {
@@ -1723,6 +1890,11 @@ video {
   .xs\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+
+  .xs\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 }
 
@@ -1735,6 +1907,14 @@ video {
     max-width: 270px;
   }
 
+  .sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .sm\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -1745,19 +1925,19 @@ video {
     line-height: 2.25rem;
   }
 
+  .sm\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
   .sm\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
   }
 
-  .sm\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-
-  .sm\:text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
+  .sm\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 }
 
@@ -1769,6 +1949,18 @@ video {
 
   .md\:mb-2 {
     margin-bottom: 0.5rem;
+  }
+
+  .md\:mt-28 {
+    margin-top: 7rem;
+  }
+
+  .md\:mt-2 {
+    margin-top: 0.5rem;
+  }
+
+  .md\:mt-24 {
+    margin-top: 6rem;
   }
 
   .md\:inline-block {
@@ -1803,8 +1995,12 @@ video {
     max-width: 460px;
   }
 
-  .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+  .md\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .md\:gap-x-6 {
@@ -1819,11 +2015,6 @@ video {
 
   .md\:bg-home-dekstop {
     background-image: url(../images/headerBgDesktop.webp);
-  }
-
-  .md\:px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
   }
 
   .md\:pt-64 {
@@ -1854,6 +2045,11 @@ video {
     font-size: 1.125rem;
     line-height: 1.75rem;
   }
+
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -1865,8 +2061,24 @@ video {
     width: 90%;
   }
 
+  .lg\:w-64 {
+    width: 16rem;
+  }
+
+  .lg\:w-5 {
+    width: 1.25rem;
+  }
+
+  .lg\:w-56 {
+    width: 14rem;
+  }
+
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 
   .lg\:gap-x-9 {
@@ -1878,11 +2090,25 @@ video {
     padding-left: 2.5rem;
     padding-right: 2.5rem;
   }
+
+  .lg\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
 }
 
 @media (min-width: 1280px) {
   .xl\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .xl\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 
   .xl\:gap-x-10 {
@@ -1893,5 +2119,10 @@ video {
   .xl\:gap-x-9 {
     -moz-column-gap: 2.25rem;
          column-gap: 2.25rem;
+  }
+
+  .xl\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
